--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 aria-label="Close"
               ></button>
             </div>
-            <form name="wpu-contact-form">
+            <form name="WPU-Contact-Form">
               <div class="mb-3">
                 <label
                   for="name"
@@ -361,8 +361,8 @@
     ></script>
 
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbzjWwvjJihKz3-24SxEnHM5XFjNPgQd_dv3uD_fgjLSp_4AAXsC6IC4C_ECvWyLkGsuBg/exec';
-      const form = document.forms['wpu-contact-form'];
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbyOvRpzer3LU8teOE5soBo2yCROAETYUoD-jJikWgZtT9BWnKcqKaAHg18p5Xco1kDW/exec';
+      const form = document.forms['WPU-Contact-Form'];
       const btnKirim = document.querySelector('.btn-kirim');
       const btnLoading = document.querySelector('.btn-loading');
       const myAlert = document.querySelector('.my-alert');
@@ -387,6 +387,5 @@
           .catch((error) => console.error('Error!', error.message));
       });
     </script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
